# LegacyLift_AI_Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
parsing/: ast_parser.py  file_scanner.py  language_detector.py  main.py  parser.py
parsing/analyzers/: ast_parser.py
parsing/api/: main.py
parsing/api/routes/: query.py
parsing/api/services/: rag_service.py
parsing/config/: settings.py
parsing/core/: orchestrator.py
parsing/execution_engine/runner/: java_runner.py  python_runner.py
parsing/metrics/analyzer/: improvement_analyzer.py
parsing/metrics/pipeline/: metrics_pipeline.py
parsing/rag/embedding/: embedder.py
parsing/rag/models/: rag_schema.py
parsing/rag/pipeline/: rag_pipeline.py  test_rag_pipeline.py
parsing/rag/preprocessing/: document_builder.py  test_document_builder.py
parsing/rag/retrieval/: retriever.py  test_retriever.py
parsing/rag/vector_store/: faiss_store.py
parsing/utils/: logger.py
